add: Jwt Generation Service
